--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -177,6 +177,16 @@ nav li {
 li:hover {
    color: #b1663c;
 }
+
+nav li a {
+   color: black;
+   text-decoration: none;
+}
+
+li a:hover {
+   color: #b1663c;
+}
+
 #introduction {
    display: flex;
    align-items: center;
@@ -295,4 +305,143 @@ button {
    flex-direction: column;
    gap: 5px;
    margin: 40px;
+}
+
+.modalContainer {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: #0000004d;
+}
+
+.modal {
+   display: flex;
+   justify-content: space-around;
+   flex-direction: column;
+   align-items: center;
+   height: 90%;
+   width: 630px;
+   background-color: white;
+   border-radius: 5px;
+   position: relative;
+}
+
+.modal .fa-xmark {
+   position: absolute;
+   top: 20px;
+   right: 20px;
+   cursor: pointer;
+}
+
+.modal .fa-arrow-left {
+   position: absolute;
+   top: 20px;
+   left: 20px;
+   cursor: pointer;
+}
+
+.modal h2 {
+   font-family: Work Sans;
+   font-size: 26px;
+   font-weight: 400;
+   line-height: 30px;
+   letter-spacing: 0em;
+   text-align: center;
+   color: black;
+}
+
+.buttonModal {
+   background-color: #1d6154;
+   color: white;
+   font-family: Syne;
+   font-size: 14px;
+   font-weight: 700;
+   line-height: 17px;
+   letter-spacing: 0em;
+   text-align: center;
+}
+
+.hide {
+   display: none !important;
+}
+
+#erreurMessage {
+   color: red;
+   display: none;
+}
+
+.edition {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: black;
+   padding: 22px;
+   width: 100%;
+}
+
+.edition a {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   gap: 5px;
+   color: white;
+   font-size: 16px;
+}
+
+.editionButton {
+   width: fit-content;
+   cursor: pointer;
+}
+
+.modalGallery {
+   display: grid;
+   grid-template-columns: repeat(auto-fill, minmax(65px, 1fr));
+   gap: 10px;
+   overflow: hidden;
+   margin: 0 100px;
+}
+
+.imageContainer {
+   position: relative;
+}
+
+.imageContainer img {
+   width: 100%;
+   height: auto;
+}
+
+.imageContainer button {
+   position: absolute;
+   top: 4px;
+   right: 4px;
+   background-color: black;
+   color: white;
+   border: none;
+   padding: 5px 10px;
+   border-radius: 5px;
+   cursor: pointer;
+   min-width: 20px;
+   width: 20px;
+   height: 20px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 12px;
+}
+
+.addPhoto {
+   width: 420px;
+   height: 169px;
+   top: 786px;
+   left: 510px;
+   gap: 0px;
+   border-radius: 3px 0px 0px 0px;
+   opacity: 0px;
+
+   background: #e8f1f6;
 }
