--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -212,7 +212,6 @@ li a:hover {
 }
 #portfolio h2 {
    text-align: center;
-   margin-bottom: 1em;
 }
 .gallery {
    width: 100%;
@@ -291,6 +290,10 @@ button {
    text-decoration: none;
 }
 
+.logo h1 {
+   gap: 5px;
+}
+
 .filters {
    display: flex;
    justify-content: center;
@@ -308,7 +311,8 @@ button {
    display: flex;
    flex-direction: column;
    gap: 5px;
-   margin: 40px;
+   margin-top: 40px;
+   margin-bottom: 25px;
 }
 
 .login-form input {
@@ -363,11 +367,10 @@ button {
 
 .modal {
    display: flex;
-   justify-content: space-around;
    flex-direction: column;
    align-items: center;
-   height: 90%;
-   width: 630px;
+   height: 85%;
+   width: 37%;
    background-color: white;
    border-radius: 5px;
    position: relative;
@@ -375,9 +378,10 @@ button {
 
 .modal .fa-xmark {
    position: absolute;
-   top: 20px;
-   right: 20px;
+   top: 28px;
+   right: 36px;
    cursor: pointer;
+   font-size: 20px;
 }
 
 .modal .fa-arrow-left {
@@ -406,6 +410,22 @@ button {
    line-height: 17px;
    letter-spacing: 0em;
    text-align: center;
+   width: 237px;
+   margin: 6%;
+}
+
+.buttonValider {
+   background-color: #a7a7a7;
+   color: white;
+   font-family: Syne;
+   font-size: 14px;
+   font-weight: 700;
+   line-height: 17px;
+   letter-spacing: 0em;
+   text-align: center;
+   width: 237px;
+   margin: 6%;
+   border: none;
 }
 
 .hide {
@@ -422,12 +442,12 @@ button {
    justify-content: center;
    align-items: center;
    background-color: black;
-   padding: 22px;
-   width: 100%;
+   padding: 22px 0;
    width: 100vw;
    position: absolute;
    left: 0;
    top: 0;
+   max-width: 100%;
 }
 
 .edition a {
@@ -444,16 +464,41 @@ button {
    cursor: pointer;
 }
 
+.projects {
+   display: flex;
+   flex-direction: row;
+   justify-content: center;
+   align-items: center;
+   margin-bottom: 1em;
+   gap: 30px;
+}
+
+.editionButton2 {
+   cursor: pointer;
+   display: flex;
+   justify-content: center;
+   align-self: center;
+   gap: 10px;
+}
+
+.margin-edition {
+   margin-top: 50px;
+}
+
 .modalGallery {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(65px, 1fr));
-   gap: 10px;
    overflow: hidden;
-   margin: 0 100px;
+   margin: 0 15%;
+   padding-bottom: 100px;
+   border-bottom: 1px solid #b3b3b3;
+   height: 53%;
 }
 
 .imageContainer {
    position: relative;
+   width: 85%;
+   height: 85%;
 }
 
 .imageContainer img {
@@ -481,12 +526,109 @@ button {
 }
 
 .addPhoto {
-   width: 420px;
-   height: 169px;
+   width: 68%;
+   height: 26%;
    top: 786px;
    left: 510px;
    gap: 0px;
    border-radius: 3px 0px 0px 0px;
    opacity: 0px;
-   background: #e8f1f6;
+   background-color: #e8f1f6;
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+   flex-direction: column;
+   gap: 5px;
+}
+
+.addPhoto button {
+   width: 173px;
+   height: 36px;
+   top: 881px;
+   left: 633px;
+   gap: 0px;
+   border-radius: 50px;
+   border: none;
+   opacity: 0px;
+   background: #cbd6dc;
+   color: #306685;
+   font-size: 14px;
+   font-family: Work Sans;
+   font-weight: 500;
+}
+
+.addPhoto label {
+   color: #444444;
+   font-size: 10px;
+   position: relative;
+   margin-bottom: 5px;
+}
+
+.modal h2 {
+   font-family: Work Sans;
+   font-size: 21px;
+   font-weight: 400;
+   height: 20%;
+   min-height: 100px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+#imageUpload {
+   position: absolute;
+   width: 68%;
+   height: 25%;
+   cursor: pointer;
+   opacity: 0;
+}
+
+#imagePreview {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: absolute;
+   height: 25%;
+}
+
+#imagePreview img {
+   position: absolute;
+   height: 150px;
+   height: 100%;
+}
+
+.modalInputs {
+   gap: 10px;
+   overflow: hidden;
+   margin: 0 100px;
+   border-bottom: 1px solid #b3b3b3;
+   height: 30%;
+   width: 68%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+   padding: 20px 0;
+}
+
+.modalInput {
+   width: 100%;
+   color: #3d3d3d;
+   font-family: Work Sans;
+   font-size: 14px;
+   font-weight: 500;
+}
+
+.modalInput input,
+select {
+   background: #ffffff;
+   box-shadow: 0px 4px 14px 0px #00000017;
+   width: 100%;
+   height: 50px;
+   border: 1px solid white;
+}
+
+.fa-image {
+   color: #b9c5cc;
+   font-size: 70px;
 }
